Se divide el texto en párrafos

--- a/DocTranslate.Web/Index.html
+++ b/DocTranslate.Web/Index.html
@@ -20,6 +20,7 @@
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/Site.css" rel="stylesheet" />
+    <link href="Content/textarea.css" rel="stylesheet" />
 
     <link href="Content/doctranslate.css" rel="stylesheet" />
 </head>
